Fix Generic ErrorProne/NullAway/JavaStyleGuide warnings | Common Module | Unit Tests